--- a/.editorconfig
+++ b/.editorconfig
@@ -13,7 +13,7 @@ tab_width = 4
 max_line_length = off
 
 # New line preferences
-end_of_line = crlf
+# end_of_line = crlf
 insert_final_newline = false
 
 #### .NET Coding Conventions ####
