--- a/.editorconfig
+++ b/.editorconfig
@@ -218,3 +218,5 @@ dotnet_naming_style.camel_case.required_prefix =
 dotnet_naming_style.camel_case.required_suffix = 
 dotnet_naming_style.camel_case.word_separator = 
 dotnet_naming_style.camel_case.capitalization = camel_case
+
+insert_final_newline = true
